# AndroidUniversalRecovery

./: README.md  pyproject.toml  requirements.txt
docs/: ROADMAP.md
src/aur/: __init__.py  cli.py  recovery_ops.py
src/aur/builder/: __init__.py  _common.py  cloud_vm.py  docker.py  plain.py
src/aur/device/: __init__.py  adb.py  bootimg.py  fingerprint.py  partitions.py
src/aur/generator/: __init__.py  orangefox.py  twrp.py
src/aur/gui/: __init__.py  about.py  app.py  pages.py  sidebar.py  state.py  theme.py  widgets.py  workers.py
tests/: test_fingerprint_parsing.py  test_fingerprint_roundtrip.py  test_partition_parsing.py  test_recovery_ops_resolve.py
