[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-universal-recovery"
version = "0.1.0"
description = "Generate a TWRP/OrangeFox device tree and build plan for a specific Android phone by fingerprinting it over ADB."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "at0m_b0mb" }]
keywords = ["android", "recovery", "twrp", "orangefox", "adb", "device-tree"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Recovery Tools",
]

dependencies = [
    "twrpdtgen>=2.3.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
aur = "aur.cli:main"
aur-gui = "aur.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
